fix: Update Go version, fix OpenAPI schema, and refactor error handling (#2)
* chore(deps): update Go version and dependencies in go.mod and go.sum

* fix(openapi): update get account/balance schema and add balance property to Transaction

* refactor: move ErrorToStatusCode function to utils and update references

* chore: remove coverage report file `cover.out` as it is no longer needed in the repository.

* docs: add package and function descriptions for handler and utils

* fix(account): validate deposit amount against maximum safe integer limit

* test(account): enhance deposit and withdrawal tests for overflow scenarios

* chore(ci): update Go version to 1.24.x in CI workflow

* fix(ci): correct test command syntax in CI workflow

* fix(ci): simplify Go test command and remove artifact upload step

* fix(ci): specify package path in Go test command

* fix(ci): change build job to use ubuntu-latest-arm

* ci: update build job to use ubuntu-24.04-arm
